--- a/app/globals.css
+++ b/app/globals.css
@@ -10,4 +10,7 @@ html {
   .infoText {
     @apply p-4 bg-white/5 rounded-lg text-sm w-64 md:w-56;
   }
+  .chatRow {
+    @apply rounded-lg px-5 py-3 text-sm flex items-center justify-center space-x-2 hover:bg-gray-700/70 cursor-pointer text-white transition-all duration-200 ease-out;
+  }
 }
